# TRInk

./: .gitignore  AGENT_TASK.md  BETA_README.md  EULA.md  LICENSE.md  PRIVACY.md  RC_CHECKLIST.md  README.md  README_BASIC.md  RELEASE_NOTES.md  RELEASE_NOTES_BASIC.md  ROADMAP.md  TESTING.md  TESTING_BASIC.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
config/: edition-config.json
docs/: COMPATIBILITY.md  EDITIONS.md  SIGNING.md  UPDATER.md  VERSIONING.md
scripts/: assets-installer.js  package-beta-release.ps1  package-internal-release.ps1  package-release.ps1  prepare-edition.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.base.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: EULA.txt
src-tauri/src/: lib.rs  main.rs
src/components/: CanvasSurface.tsx  SettingsPanel.tsx  TimerOverlay.tsx  Toolbar.tsx  basic-input-behavior.test.ts  basic-ui.test.ts
src/editions/: basic.ts  build-metadata.test.ts  build-metadata.ts  edition.test.ts  edition.ts  features.ts  trading.ts  ui.test.ts  ui.ts
src/hooks/: usePersistentSettings.ts
src/lib/: app-meta.test.ts  app-meta.ts  chart-patterns.ts  drawable-validation.test.ts  drawable-validation.ts  export-file.ts  export-format.test.ts  export-format.ts  export-renderer.test.ts  export-renderer.ts  geometry.ts  hit-test.test.ts  hit-test.ts  legacy-markers.ts  monitor-utils.test.ts  monitor-utils.ts  object-editing.test.ts  object-editing.ts  rendering.ts  session-file.ts  session-format.test.ts  timer.ts  (+17 more)
tools-handoff/: trink-changelog-summary.md  trink-faq.md  trink-install-instructions.md  trink-release-manifest.json  trink-short-description.txt  trink-tool-card.json  trink-tool-card.md
(+14 files in other folders)
